tunneling-egress-traffic/gateway/http/envoy.yaml
admin:
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 9902

static_resources:
  listeners:
  - name: egress_gateway_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 443
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          access_log:
          - name: envoy.access_loggers.file
            typed_config:
              "@type": "type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog"
              path: /var/log/envoy/access.log
              format: "[%START_TIME%] %DOWNSTREAM_REMOTE_ADDRESS% \"%REQ(:METHOD)% %UPSTREAM_HOST% [SNI: %REQUESTED_SERVER_NAME%] %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" - %RESPONSE_CODE% - %RESPONSE_FLAGS% \n"
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: default
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: loopback_cluster
          stat_prefix: egress_gateway_listener
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.DownstreamTlsContext
          common_tls_context:
            tls_certificates:
            - certificate_chain:
                filename: /etc/pki/tls/certs/envoy-cert.pem
              private_key:
                filename: /etc/pki/tls/private/envoy-key.pem
            validation_context:
              trusted_ca:
                filename: /etc/pki/CA/envoy-ca-cert.pem
  - name: loopback_listener
    address:
      pipe:
        path: "@/loopback_listener"
    filter_chains:
    - filters:
      - name: tcp
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
          cluster: external_proxy_cluster
          stat_prefix: external_proxy
          tunneling_config:
            hostname: www.wikipedia.org:443
  clusters:
  - name: loopback_cluster
    connect_timeout: 5s
    upstream_connection_options:
      tcp_keepalive: {}
    type: STATIC
    load_assignment:
      cluster_name: loopback_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              pipe:
                path: "@/loopback_listener"
  - name: external_proxy_cluster
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: proxy_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: external-proxy
                port_value: 3128
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
